--- a/src/App.css
+++ b/src/App.css
@@ -3,20 +3,22 @@
 
 
 }
-html, body, #app, #app>div {
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.76);
-  color: white;
-}
-
-/* .pages-background{
+html,
+body,
+#app,
+#app > div {
+    height: 100vh;
+    overflow: hidden;
+    background-color: var(--body-background);
+    color: white;
+    }/* .pages-background{
   background-color: black;
   color: white;
    height: 93vh; 
 } */
 
 
-/* .App-header {
+    /* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -26,24 +28,25 @@ html, body, #app, #app>div {
   font-size: calc(10px + 2vmin);
   color: white;
 }
- */
- :root {
-  --light-blue: #04c3ff;
-  --light-blue-shadow: rgb(69 211 255 / 27%);
-  --sea-green: #0abead;
-  --sea-green-dark: #0cbfae;
-  --sea-green-extra-dark: #09bead;
-  --sea-green-shadow: rgba(11, 190, 173, 0.4);
-  --header-hamburger-background: rgba(11, 190, 173, 0.8);
-  --orange: #f57f17;
-  --dark-orange: #ff5823;
-  --orange-shadow: rgba(245, 127, 23, 0.2);
-  --white: #ffffff;
-  --black: #333333;
-  --disabled-btn: #09bead7a;
-  --error-message: #e44f4fd1;
-  --toast-error: #e44f4ffa;
-  --toast-shadow: #9c9c9ce3;
-  --toast-success: #0cbfae;
-  --loader-color: #0cbfae;
-}
+ */:root
+    {
+        --body-background: rgba(0, 0, 0, 0.644);
+        --light-blue: #04c3ff;
+        --light-blue-shadow: rgb(69 211 255 / 27%);
+        --sea-green: #0abead;
+        --sea-green-dark: #0cbfae;
+        --sea-green-extra-dark: #09bead;
+        --sea-green-shadow: rgba(11, 190, 173, 0.4);
+        --header-hamburger-background: rgba(11, 190, 173, 0.8);
+        --orange: #FF5C00;
+        --dark-orange: #ff5823;
+        --orange-shadow: rgba(245, 127, 23, 0.2);
+        --white: #ffffff;
+        --black: #333333;
+        --disabled-btn: #09bead7a;
+        --error-message: #e44f4fd1;
+        --toast-error: #e44f4ffa;
+        --toast-shadow: #9c9c9ce3;
+        --toast-success: #0cbfae;
+        --loader-color: #0cbfae;
+    }
