--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,15 @@
 
 
 }
+.container{
+  padding-top: 2%;
+}
 html,
 body,
 #app,
 #app > div {
-    height: 100vh;
-    overflow: hidden;
+   /*  height: 100vh; */
+    overflow: auto;
     background-color: var(--body-background);
     color: white;
     }/* .pages-background{
