fixed profilephoto error

--- a/src/Pages/Profile/Profile.css
+++ b/src/Pages/Profile/Profile.css
@@ -57,7 +57,7 @@ html, body{
     height: 92%;
     width: 92%;
     border-radius: 50%;
-    background-image: url("../images/profile\ image.jpg");
+    background-image: url("/public/images/profileimage.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
