--- a/src/Pages/Portfolio/Portfolio.css
+++ b/src/Pages/Portfolio/Portfolio.css
@@ -1,10 +1,10 @@
 .projects-outer img {
  
-    align-items: center;
-    justify-content: center;
+   /*  align-items: center;
+    justify-content: center; */
   
-    height: 60%;
-  width: 60%;
+    height: 80%;
+  width: 80%;
   }
   /* .photo-background {
     height: 100%;
@@ -17,52 +17,60 @@
     transition: 1s ease-out;
   } */
 
-  .projects-outer{
-     /*  border: 1px solid white; */
-    /* width: 80%;
-   margin-left: 10%; */
+  /* .projects-outer{
+      border: 1px solid white;
+    width: 80%;
+   margin-left: 10%;
      
-  }
+  } */
   .footer{
       display: flex;
       align-items: center;
     justify-content: center;
+    margin-bottom: 30px;
+   
   }
+
   .center{
     align-items: center;
     justify-content: center;
 
   }
-
- .container{
-    margin-right: 4%;
-    margin-left: 4%;
+.hidden{
+    display: none;
+}
+  .container{
+    /* margin-right: 4%;
+    margin-left: 4%; */
+     color: white; 
    
  }
 
  .description-text{
      font-size: 16px;
-  
+    
     
  }
+
  .description{
      margin-top: 4px;
-  /*  border: 2px solid white; */
-   width: 60%;
-   margin-left: 20%;
+   /* border: 2px solid white;*/
+   width: 80%;
+   margin-left: 10%; 
+  
   
      
  }
 
  @media only screen and (max-width: 867px){
-    .container{
+    /* .container{
         margin-right: 0%;
         margin-left: 0%;
      }
     
      .description{
         margin-top: 9px;
-     /*  border: 2px solid white; */
+      border: 2px solid white;
       width: 100%;
       margin-left: 0%;
      
@@ -83,5 +91,11 @@
       width: 90%;
       margin-left: 5%;
       
+      } */
+      .hidden{
+          display: block;
       }
- }
+      .visible{
+          display: none;
+      }
+ } 
