--- a/src/Pages/Profile/Profile.css
+++ b/src/Pages/Profile/Profile.css
@@ -54,13 +54,14 @@ html, body{
     margin: 0 0px 0 100px;
   }
   .profile-picture-background {
-    height: 92%;
-    width: 92%;
-    border-radius: 50%;
-    background-image: url("/public/images/profileimage.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+    height: 110%;
+    width: 110%;
+    border-radius: 20%;
+  /*   background-image: url("/public/images/profileimage.jpg"); */
+    /* background-size: cover; */
+    /* background-repeat: no-repeat; */
+  /*   background-position: center; */
+  /* margin-bottom: 15%; */
   }
   .profile-picture-background:hover {
     transform: scale(1.07);
@@ -72,7 +73,7 @@ html, body{
     padding: 8px;
     padding-left: 0px;
   }
-  .colz .cols-icon a:hover {
+ .icon:hover {
     transform: scale(1.5);
   }
   .colz {
@@ -104,6 +105,10 @@ html, body{
   @media only screen and (max-width: 810px) {
     .profile-picture {
       margin: 0 !important;
+    }
+    .profile-picture-background {
+   
+    margin-bottom: 15%;
     }
     .profile-parent {
       flex-direction: column-reverse;
