Added background info, changed data.js

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
-.App {
-    text-align: center;
+/* .App {
+   
+ 
 
+} */
 
-}
 /* .container2{
   padding-top: 2%;
   color: var(--white);
@@ -15,7 +16,8 @@ body,
     overflow: auto;
     background-color: #262626 !important;
     color: var(--white);
-  } /*   .pages-background{
+  } 
+  /*   .pages-background{
   background-color: black;
   color: white;
    height: 93vh; 
