--- a/src/Pages/ContactMe/ContactMe.css
+++ b/src/Pages/ContactMe/ContactMe.css
@@ -1,44 +1,87 @@
 .form-central-form {
-    max-width: 1100px;
+    max-width: 1200px;
     padding: 10px;
-    display: flex;
-/*     box-shadow: 0 0 20px -2px black; */
+    /*  display: flex; */
+    /*  box-shadow: 0 0 20px -2px black; */
     border-radius: 12px;
     margin: 0 auto;
     flex-direction: column;
-    justify-content: center;
-   
+    /* justify-content: center; */
 }
 
 .form-central-form h1 {
     letter-spacing: 0.1rem;
     margin-bottom: 20px;
-    
 }
 
-.contact-me-container{
-    text-align: left;
+.container {
+    text-align: left !important;
     color: white;
+    /* margin-top: 1%; */
 }
 
-.form-back-form {
+/* .form-back-form {
     max-width: 380px;
     margin: 0 auto;
-}
+} */
 
-.form-back-form .form-img-back {
+/* .form-back-form .form-img-back {
     width: 100%;
     margin: 0 auto;
-}
+} */
 
-.form-img-back p {
+/* .form-img-back p {
     letter-spacing: 0.1rem;
     font-weight: 400;
     font-size: 18px;
+} */
+
+/* .form-back-form .form-img-back img {
+    width: 100%;
+} */
+
+.form-img-back {
+    display: flex;
+    flex-direction: column;
 }
 
-.form-back-form .form-img-back img {
-    width: 100%;
+.form-phone-icon {
+    box-shadow: 0 0 10px -3px bisque;
+    border-radius: 7px;
+    max-width: fit-content;
+    padding: 10px;
+    margin-top: 20px;
+}
+.form-phone-icon:hover {
+    cursor: pointer;
+}
+
+.form-email-icon {
+    /* border: solid 1px bisque; */
+    box-shadow: 0 0 10px -3px bisque;
+    border-radius: 7px;
+    max-width: fit-content;
+    padding: 10px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.form-email-icon:hover {
+    cursor: pointer;
+}
+.form-email-icon a{
+    text-decoration: none;
+    color: white;
+}
+
+.form-location-icon {
+    box-shadow: 0 0 10px -3px bisque;
+    border-radius: 7px;
+    max-width: fit-content;
+    padding: 10px;
+}
+
+.form-location-icon {
+    cursor: pointer;
 }
 
 .form-central-form form {
@@ -108,8 +151,6 @@ form button span {
     padding: 0;
 }
 
-
-
 .form-col svg {
     margin-right: 5px;
     margin-left: 5px;
@@ -118,27 +159,36 @@ form button span {
     transform: scale(1.5);
     transition: ease 0.6s;
 }
-@media screen and (min-width: 940px) {
+
+.star{
+    color: red;
+}
+
+
+@media(min-width: 940px) {
     .form-back-form {
-        max-width: 1100px;
-        margin: 0px auto;
+        max-width: 1200px;
+        margin: 30px auto 0;
         display: flex;
         justify-content: space-between;
-        margin-top: 30px;
     }
-  
     .form-img-back {
         flex: 1;
         align-self: center;
         margin-right: 20px;
     }
-  
     form {
         flex: 0.9;
     }
-  }
-  @media screen and (max-width: 414px) {
+}
+@media(max-width: 414px) {
+    .form-central-form {
+        margin-top: 15px;
+    }
     .form-central-form h1 {
-        font-size: 16px;
-      }
-  }
+        font-size: 20px;
+    }
+    .form-img-back {
+        margin-top: 20px;
+    }
+}
