--- a/src/Pages/Portfolio/Portfolio.css
+++ b/src/Pages/Portfolio/Portfolio.css
@@ -1,12 +1,12 @@
 .projects-outer img {
- 
-   /*  align-items: center;
+
+    /*  align-items: center;
     justify-content: center; */
-  
+
     height: 80%;
-  width: 80%;
-  }
-  /* .photo-background {
+    width: 80%;
+}
+/* .photo-background {
     height: 100%;
     width: 100%;
  
@@ -17,52 +17,57 @@
     transition: 1s ease-out;
   } */
 
-  /* .projects-outer{
-      border: 1px solid white;
-    width: 80%;
-   margin-left: 10%;
-     
-  } */
-  .footer{
-      display: flex;
-      align-items: center;
+.projects-outer {
+    text-align: center;
+
+}
+.footer {
+    display: flex;
+    align-items: center;
     justify-content: center;
     margin-bottom: 30px;
-   
-  }
 
-  .center{
+}
+
+.center {
     align-items: center;
     justify-content: center;
 
-  }
-.hidden{
+}
+.hidden {
     display: none;
 }
-  .container{
+.container {
     /* margin-right: 4%;
     margin-left: 4%; */
-     color: white; 
-   
- }
-
- .description-text{
-     font-size: 16px;
+    color: white;
+    max-width: 1200px;
+    max-height: auto;
+    padding: 10px;
+    margin-top: 15px !important;
     
-    
- }
+}
 
- .description{
-     margin-top: 4px;
-   /* border: 2px solid white;*/
-   width: 80%;
-   margin-left: 10%; 
-  
-  
-     
- }
+.description-text {
+    font-size: 16px;
 
- @media only screen and (max-width: 867px){
+
+}
+
+.description {
+    margin-top: 4px;
+    /* border: 2px solid white;*/
+    width: 80%;
+    margin-left: 10%;
+}
+
+.portfolo-heading {
+ 
+  margin-bottom: 10px;
+  max-width: 50%;
+}
+
+@media (max-width: 867px) {
     /* .container{
         margin-right: 0%;
         margin-left: 0%;
@@ -92,10 +97,15 @@
       margin-left: 5%;
       
       } */
-      .hidden{
-          display: block;
-      }
-      .visible{
-          display: none;
-      }
- } 
+    .hidden {
+        display: block;
+    }
+    .visible {
+        display: none;
+    }
+    .portfolo-heading {
+ margin-top: 50px;
+      margin-bottom: 30px;
+      max-width: 50%;
+    }
+}
